--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -154,57 +154,38 @@
         <div class="vr-video">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-full">
-                    <h2 class="text-center font-2 text-7xl mb-8 uppercase">Projects​</h2>
+                    <h2 class="text-center font-2 text-7xl mb-8">Projects​</h2>
 
                     <div class="relative overflow-hidden">
                         <!-- Slider Content -->
-                        <div class="flex transition-transform duration-500 ease-in-out" id="testimontal-slider">
+                        <div class="flex transition-transform duration-500 ease-in-out" id="testimonial-slider">
                             <!-- Slide 1 -->
                             <div class="min-w-full flex flex-col items-center text-center p-6 rounded-lg">
-                                <div class="vr-videos  vr-video-2 relative bg-center bg-cover bg-no-repeat flex justify-center items-center"
-                                    style="background-image: url('assets/image/vr-project.jpg');">
-                                    <div
-                                        class="flex justify-center items-center play-btn w-16 h-16 bg-yellow-500 rounded-full outline outline-offset-1 outline-2 outline-offset-4 z-10">
-                                        <a href="">
-                                            <img class="w-6 h-6" src="assets/image/play-btn.png" alt="play-btn">
-                                        </a>
-                                    </div>
-                                </div>
-                                <p class="mt-20 text-3xl">Staples Virtual Exhibition</p>
+                                <iframe width="1000" height="500" src="https://www.youtube.com/embed/G_defBwt7EY?si=Iv7U5vB-Wwny-RqS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
 
                             <!-- Slide 2 -->
                             <div class="min-w-full flex flex-col items-center text-center p-6 rounded-lg">
-                                <div
-                                    class="vr-videos vr-video-1 vr-video-2 relative bg-center bg-cover bg-no-repeat flex justify-center items-center">
-                                    <div
-                                        class="flex justify-center items-center play-btn w-16 h-16 bg-yellow-500 rounded-full outline outline-offset-1 outline-2 outline-offset-4 z-10">
-                                        <a href="">
-                                            <img class="w-6 h-6" src="assets/image/play-btn.png" alt="play-btn">
-                                        </a>
-                                    </div>
+                                <div class="flex justify-center items-center">
+                                    <iframe width="1000" height="500" src="https://www.youtube.com/embed/ITHaJGshnWA?si=VH7vkFwur-bqNHZ3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
-                                <p class="mt-20 text-3xl">Staples Virtual Exhibition</p>
                             </div>
 
                             <!-- Slide 3 -->
                             <div class="min-w-full flex flex-col items-center text-center p-6 b rounded-lg">
-                                <div
-                                    class="vr-videos vr-video-2 relative bg-center bg-cover bg-no-repeat flex justify-center items-center">
-                                    <div
-                                        class="flex justify-center items-center play-btn w-16 h-16 bg-yellow-500 rounded-full outline outline-offset-1 outline-2 outline-offset-4 z-10">
-                                        <a href="">
-                                            <img class="w-6 h-6" src="assets/image/play-btn.png" alt="play-btn">
-                                        </a>
-                                    </div>
+                                <div class="flex justify-center items-center">
+                                    <iframe width="1000" height="500" src="https://www.youtube.com/embed/R9_imC5XwVo?si=R6Ce_ZrTHTypZtcs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
-                                <p class="mt-20 text-3xl">Staples Virtual Exhibition</p>
                             </div>
                         </div>
                     </div>
                     <div class="flex justify-center mt-10">
-                        <img src="assets/image/Arrow 2.png" alt="Arrow 2" class="mr-10">
-                        <img src="assets/image/Arrow 1.png" alt="Arrow 1">
+                        <a type="button" id="prev" class="cursor-pointer">
+                            <img src="assets/image/Arrow 2.png" alt="Arrow 2" class="mr-10">
+                        </a>
+                        <a type="button" id="next" class="cursor-pointer">
+                            <img  src="assets/image/Arrow 1.png" alt="Arrow 1">
+                        </a>
                     </div>
                 </div>
                 <!-- Slider Container -->
